# CORE

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  run.sh
.github/workflows/: android.yml  ci.yml  macos.yml
apps/android/BasicApp/: AndroidManifest.xml  CMakeLists.txt
apps/android/BasicApp/src/: main.cpp
build_apps/: CMakeCache.txt  Makefile  cmake_install.cmake  core_basic_app.apk  core_basic_app.apk.idsig  debug.keystore
cmake/: core.cmake  example.cmake  vulkan_shaders.cmake  vulkan_tutorial.cmake
egl/: CMakeLists.txt
egl/egl/: Context.cpp  Context.h
examples/: CMakeLists.txt  glfw.cpp
examples/DrawTextureDemo/: GraphicTexture.cpp  GraphicTexture.h  Texture.frag  Texture.vert  main.cpp
examples/DrawTriangleDemo/: GraphicTriangle.cpp  GraphicTriangle.h  Triangle.vert  main.cpp
examples/data/: piazza_bologni_1k_cubmap.hdr
examples/metal/MetalTextureDemo/: main.cpp  square.metal
examples/metal/MetalTriangleDemo/: main.cpp  main2.cpp  triangle.metal
examples/opengl/GLBlendDemo/: main.cpp
examples/opengl/GLCubeMapDemo/: main.cpp
examples/opengl/GLDepthStencilDemo/: main.cpp
examples/opengl/GLFrameBufferDemo/: main.cpp
examples/opengl/GLLightDemo/: main.cpp
examples/opengl/GLTextureDemo/: main.cpp
examples/opengl/GLTriangleDemo/: main.cpp
examples/opengl/GlCameraDemo/: main.cpp
examples/vulkan/ComputeBarycentricRasterizer/: Barycentric.comp  ComputeBarycentric.cpp  ComputeBarycentric.h  main.cpp
examples/vulkan/CubeMapDemo/: CubeMap.frag  CubeMap.vert  GraphicCubeMap.cpp  GraphicCubeMap.h  GraphicModel.cpp  GraphicModel.h  main.cpp
examples/vulkan/DepthTestingDemo/: GraphicDepth.cpp  GraphicDepth.h  main.cpp
examples/vulkan/DrawTextureDemo/: GraphicTexture.cpp  GraphicTexture.h  main.cpp
examples/vulkan/DrawTriangleDemo/: GraphicTriangle.cpp  GraphicTriangle.h  main.cpp
examples/vulkan/LoadModelDemo/: GraphicModel.cpp  GraphicModel.h  main.cpp
examples/vulkan/MipmapDemo/: GraphicModel.cpp  GraphicModel.h  main.cpp
examples/vulkan/MultiSamplingDemo/: GraphicModel.cpp  GraphicModel.h  main.cpp
gtest/: CMakeLists.txt
gtest/include/gtest/: gtest-message.h  gtest-typed-test.h  gtest_pred_impl.h
gtest/include/gtest/internal/: gtest-filepath.h  gtest-port.h  gtest-string.h
gtest/src/: gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-typed-test.cc
io/: CMakeLists.txt
io/include/: Bitmap.h  IOUtils.h  TextureIO.h
io/src/: Bitmap.cpp  IOUtils.cpp  StbImpl.cpp  TextureIO.cpp
mat/: CMakeLists.txt  Mat.h
metal/: CMakeLists.txt
metal/include/: MTLBuffer.h  MTLCommandQueue.h  MTLContext.h  MTLRenderPipeline.h  MTLTexture.h
metal/src/: MTLBuffer.cpp  MTLCommandQueue.cpp  MTLContext.cpp  MTLRenderPipeline.cpp  MTLTexture.cpp
opencl/: CMakeLists.txt
opencl/include/: CLBuffer.h  CLCommandQueue.h  CLContext.h  CLKernel.h  CLLoader.h  CLProgram.h
opencl/src/: CLBuffer.cpp  CLCommandQueue.cpp  CLContext.cpp  CLKernel.cpp  CLLoader.cpp  CLProgram.cpp
opengl/: CMakeLists.txt
opengl/include/: GLCamera.h  GLFrameBuffer.h  GLProgram.h  GLQuery.h  GLTexture.h  GLUtils.h  GLVertexArray.h  GLVertexBuffer.h
opengl/src/: GLCamera.cpp  GLFrameBuffer.cpp  GLProgram.cpp  GLQuery.cpp  GLTexture.cpp  GLVertexArray.cpp  GLVertexBuffer.cpp
opengles/: CMakeLists.txt
opengles/include/: GLESProgram.h  GLESTexture.h  GLESVertexArray.h  GLESVertexBuffer.h
opengles/src/: GLESProgram.cpp  GLESTexture.cpp  GLESVertexArray.cpp  GLESVertexBuffer.cpp
scripts/: run.sh  sync_data.sh
shell/: build_android_apps.sh  run.sh  run_vulkan_tutorial.sh
test/: BasicTest.cpp  CMakeLists.txt
tests/: AHardwareBufferTest.cpp  BasicTest.cpp  BitmapTest.cpp  CLTest.cpp  CMakeLists.txt  EGLTest.cpp  GLESTest.cpp  MatTest.cpp  MetalTest.cpp  PerfettoTest.cpp  StbTest.cpp  ThreadPoolTest.cpp  VulkanEnvTest.cpp  VulkanTest.cpp
tests/shaders/: gaussian_blur.cl  vec_add.cl
threadpool/: CMakeLists.txt  ThreadPool.h
timer/: CMakeLists.txt  Timer.h
trace/: CMakeLists.txt
trace/include/: Trace.h  TraceCategory.h
trace/src/: Trace.cpp  TraceCategory.cpp
vulkan/: CMakeLists.txt
vulkan/include/: VulkanBase.h  VulkanBuffer.h  VulkanCamera.h  VulkanCommandBuffer.h  VulkanCompute.h  VulkanContext.h  VulkanEnv.h  VulkanGraphic.h  VulkanImage.h  VulkanLoader.h  VulkanPipeline.h  VulkanQueryPool.h  VulkanRenderPass.h  VulkanSampler.h  VulkanSwapChain.h  VulkanSync.h  VulkanUtils.h
vulkan/src/: VulkanBase.cpp  VulkanBuffer.cpp  VulkanCamera.cpp  VulkanCommandBuffer.cpp  VulkanCompute.cpp  VulkanContext.cpp  VulkanEnv.cpp  VulkanGraphic.cpp  VulkanImage.cpp  VulkanLoader.cpp  VulkanPipeline.cpp  VulkanQueryPool.cpp  VulkanRenderPass.cpp  VulkanSampler.cpp  VulkanSwapChain.cpp  VulkanSync.cpp  VulkanUtils.cpp
vulkan/tests/: CMakeLists.txt  ComputeGaussianBlurTest.cpp  ComputeSumTest.cpp
vulkan/tests/ComputeGaussianBlur/: ComputeGaussianBlur.comp  ComputeGaussianBlur.cpp  ComputeGaussianBlur.h  ComputeGaussianBlur.slang
vulkan/tests/include/: ComputeSum.h
vulkan/tests/shaders/: ComputeSum.comp
vulkan/tests/src/: ComputeSum.cpp
vulkan_tutorial/: CMakeLists.txt
vulkan_tutorial/01_base_code/: main.cpp
vulkan_tutorial/02_draw_triangle/: main.cpp
